src/styles.scss
@use "../node_modules/@the_dissidents/svelte-ui/dist/main";
@use "../node_modules/@the_dissidents/svelte-ui/dist/uchu";

@include main.configure(
  $ui-font-family:   var(--fontFamily),
  // $mono-font-family: monospace,
  $input-font-size:  0.85rem,
  $text-font-size:   var(--fontSize),

  // $page-background-light:   #fafafa,
  // $page-background-medium:  uchu.$yin-2,
  // $page-background-dark:    uchu.$yin-9,

  // $text-light:      uchu.$yin,
  // $text-dark:       uchu.$yang,
  // $h5-text-light:   uchu.$yin-6,
  // $h5-text-dark:    uchu.$yin-3,

  // $disabled-text-light:   uchu.$gray-9,
  // $disabled-text-dark:    uchu.$gray-9,
  // $disabled-back-light:   uchu.$gray-1,
  // $disabled-back-dark:    uchu.$yin-7,

  // $box-border-light:      uchu.$gray-4,
  // $box-border-dark:       uchu.$yin-8,
  // $box-back-light:        white,
  // $box-back-dark:         uchu.$yin-8,

  // $small-border-light:    uchu.$gray-4,
  // $small-border-dark:     uchu.$yin-7,

  // $button-back-light:     white,
  // $button-back-dark:      uchu.$yin-7,
  // $button-disabled-light: uchu.$gray-1,
  // $button-disabled-dark:  uchu.$yin-7,

  // $accent1-back-light:    uchu.$red-1,
  // $accent1-back-dark:     Teal,
  // $accent1-border-light:  uchu.$red-2,
  // $accent1-border-dark:   LightSeaGreen,

  // $accent2-back-light:    uchu.$pink-7,
  // $accent2-back-dark:     uchu.$blue-4,
  // $accent2-border-light:  uchu.$pink-8,
  // $accent2-border-dark:   uchu.$blue-8,

  // $slider-track-light:    uchu.$yin-1,
  // $slider-track-dark:     uchu.$yin-8,

  // $header-back-light:     uchu.$gray-1,
  // $header-back-dark:      uchu.$yin-8,
  // $header-border-light:   none,
  // $header-border-dark:    uchu.$yin-9,

  // $separator-light:       uchu.$gray-4,
  // $separator-dark:        uchu.$yin-7,
  // $separator-minor-light: uchu.$gray-2,
  // $separator-minor-dark:  uchu.$yin-7,

  // $shadow-light:  rgba(128, 128, 128, 0.5),
  // $shadow-dark:   rgba(128, 128, 128, 0.5),

  // $tab-accent-light: uchu.$blue-4,
  // $tab-accent-dark:  slategray,

  // $list-header-light:    uchu.$gray-1,
  // $list-header-dark:     uchu.$yin-8,
  // $list-border-light:    uchu.$gray-4,
  // $list-border-dark:     uchu.$yin-8,
  // $list-selection-light:  uchu.$red-1,
  // $list-selection-dark:  LightSeaGreen,

  // $border-radius-large: 3px,
  // $border-radius-small: 2px,
);

/* RESET */

:root {
  font-family: var(--fontFamily);
  font-size: var(--fontSize);
  line-height: 1.5em;
  font-weight: 400;

  font-synthesis: none;
  text-rendering: optimizeLegibility;
  -webkit-font-smoothing: antialiased;
  -moz-osx-font-smoothing: grayscale;
  -webkit-text-size-adjust: 100%;

  /* scrollbar-width: thin; */
  color-scheme: light dark;
}

html,
body {
  margin: 0;
  padding: 0;
  overflow: hidden;
  cursor: default;
  user-select: none; -webkit-user-select: none;
  -moz-user-select: none; -ms-user-select: none;
}

*,
*::before,
*::after {
  box-sizing: border-box;
}

.lucide {
  display: block;
  width: 1lh;
  height: 1lh;
  margin: auto;
  stroke: currentColor;
  stroke-width: 1;
  stroke-linecap: round;
  stroke-linejoin: round;
  fill: none;
}

hr {
  margin: 5px 0 5px 0;
}

/* CONFIG TABLE */

table.config {
  width: 100%;
}

table.config td:first-child {
  vertical-align: top;
  text-align: right;
  padding-right: 5px;
  font-size: 90%;
  white-space: nowrap;
  /* text-transform: uppercase; */
  /* font-weight: bold; */
}

/* DATA TABLE */

@media (prefers-color-scheme: light) {
  table.data th {
    background-color: var(--uchu-yin-1);
    color: var(--uchu-yin-6);
  }
  table.data .focused {
    background-color: var(--uchu-gray-1);
  }
}

@media (prefers-color-scheme: dark) {
  table.data th {
    background-color: var(--uchu-yin-5);
    color: var(--uchu-gray-1);
  }
  table.data .focused {
    background-color: var(--uchu-yin-6);
  }
}

table.data th {
  border-collapse: collapse;
  border-spacing: 0;
  text-transform: uppercase;
  font-size: 85%;
}

table.data th, table.data  td {
  border: none;
  margin: 0;
  padding: 0 5px;
}

table.data .right {
  text-align: right;
}

/* CLASSES */

.area {
  border-radius: 4px;
  transition: box-shadow 0.1s cubic-bezier(0.4, 0, 0.2, 1);
  &.focused {
    box-shadow: 0 5px 10px gray;
  }
}

.isolated {
  contain: layout size style;
}

.center-items {
  align-items: center;
}

.vlayout {
  display: flex;
  flex-direction: column;
}
.vlayout > div {
  width: 100%;
}

.hlayout {
  display: flex;
  flex-direction: row;
}
.hlayout > div {
  height: 100%;
}

.flexgrow {
  flex: 1 0;
}
.flexshrink {
  flex: 0 1;
}

.fill {
  box-sizing: border-box;
  width: 100%;
  height: 100%;
  max-height: 100%;
  max-width: 100%;
}

